<resources>
    <string name="app_name">My Application</string>
    <string name="dz1">homework1</string>
    <string name="dz2">homework2</string>
    <string name="dz3">homework3</string>
    <string name="dz4">homework4</string>
    <string name="dz5">homework5</string>
    <string name="dz6">homework6</string>
    <string name="dz7">homework7</string>
    <string name="dz8">homework8</string>
    <string name="dz9">homework9</string>
    <string name="dz11">homework11</string>
    <string name="button_upload_image">Upload image</string>
    <string name="hint_input_URL">Input URL</string>
    <string name="button_flags">Flags</string>
    <string name="button_animation">Animation</string>
    <string name="txt_flags_armenia">Armenia</string>
    <string name="txt_flags_austria">Austria</string>
    <string name="txt_flags_belgium">Belgium</string>
    <string name="txt_flags_latvia">Latvia</string>
    <string name="txt_flags_spain">Spain</string>
    <string name="txt_flags_denmark">Denmark</string>
    <string name="txt_brest_region">Brest region</string>
    <string name="txt_minsk_region">Minsk region</string>
    <string name="txt_vitebsk_region">Vitebsk region</string>
    <string name="txt_grodno_region">Grodno region</string>
    <string name="txt_gomel_region">Gomel region</string>
    <string name="txt_mogilev_region">Mogilev region</string>
    <string name="potatoes_area_in_hectares">Potatoes, area in hectares</string>
    <string name="beet_area_in_hectares">Beet, area in hectares</string>
    <string name="cabbage_area_in_hectares">Cabbage, area in hectares</string>
    <string name="button_add_snowdrop">Add snowdrop</string>
    <string name="button_show_collection">show collection</string>
    <string name="edt_input_kind_of_snowdrop">input kind of snowdrop</string>
    <string name="edt_input_url_of_snowdrop_image">input URL of snowdrop image</string>
    <string name="edt_input_description">input description</string>
    <string name="btn_add_snowdrop">Add snowdrop</string>
    <string name="txt_welcome_registration">Welcome, please enter your registration data.</string>
    <string name="button_create_an_account">Create account</string>
    <string name="hint_password">password</string>
    <string name="hint_name">name</string>
    <string name="error_empty_field">Field can not be empty!</string>
    <string name="error_many_symbols">Too many symbols!!</string>
    <string name="dialog_title_great">Great!</string>
    <string name="dialog_message">Registration completed successfully</string>
    <string name="btn_ok">ok</string>
    <string name="btn_enter">enter</string>
    <string name="txt_welcome">welcome</string>
    <string name="welcome_to_our_application_quot_victory_day_cards_quot">Welcome to our application</string>
    <string name="old_design_by_documentation_of_1990s">old design by documentation of 1990s</string>
    <string name="show_list_of_cards">show list of cards</string>
    <string name="quot_victory_day_cards_quot">"Victory day cards"</string>
    <string name="show">show</string>
    <string name="welcome">Welcome</string>
    <string name="today_s">Cryptocurrency Prices by Market Cap today</string>
    <string name="welcome_to_mystery_app">Welcome to MYSTERY APP</string>
    <string name="start">start</string>
    <string name="if_you_re_not_afraid_to_start_click_button_below">If you\'re not afraid to start, click button below</string>
    <string name="horror">horror</string>
    <string name="if_you_are_really_very_brave_please_click_button_below">if you are really very brave,please, click button below</string>
    <string name="you_are_brave">You are brave...</string>
    <string name="congratulations">Congratulations!!!</string>
    <string name="we_are_pleased_to_present_you_a_list_of">We are pleased to present you a list of countries with the upcoming holiday in each of the countries.</string>
</resources>