<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/dz2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:backgroundTint="#074741"
        android:text="@string/dz2"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="25dp" />

    <Button
        android:id="@+id/dz3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:backgroundTint="#074741"
        android:text="@string/dz3"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/dz2" />

    <Button
        android:id="@+id/dz4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:backgroundTint="#074741"
        android:text="@string/dz4"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/dz3" />


</androidx.constraintlayout.widget.ConstraintLayout>